# tonepilot

./: .gitignore  HF_API_SETUP.md  LICENSE  MANIFEST.in  README.md  available_tags.json  pyproject.toml  setup.py  tonepilot_comprehensive_mapping.json
tonepilot/cli/: cli.py
tonepilot/config/: personality_library.yaml  tonepilot_response_personality_parameters.json
tonepilot/core/: tonepilot.py
tonepilot/factory/: __init__.py  responder_factory.py  tagger_factory.py
tonepilot/responders/: base_responder.py  gemini_responder.py  huggingface_responder.py  prompt_builder.py
tonepilot/taggers/: base_tagger.py  gemini_tagger.py  hf_tagger.py  zero_shot_tagger.py
tonepilot/tonemapper/: hf_api_tonemapper.py  tonemapper.py
